# KnowledgeRAG4LLMVulD

./: LICENSE  README.md
VUL-RAG/: ChatGPT_Extraction.py  LLM4Detection_baseline.py  README.md  VulRAG_detection.py  requirements.txt
Vul-RAG/: es_retrival.py  knowledge_base_extraction.py  vul_detection.py
baseline/devign/: .gitignore  README.md  configs.json  evaluate_testset.py  main.py  pyproject.toml
baseline/devign/data/: test.json
baseline/devign/data/mydata/model/: checkpoint.pt
baseline/devign/data/mydata/tokens/: 0_cpg_tokens.pkl  1_cpg_tokens.pkl  2_cpg_tokens.pkl  3_cpg_tokens.pkl  4_cpg_tokens.pkl  5_cpg_tokens.pkl  6_cpg_tokens.pkl  7_cpg_tokens.pkl  8_cpg_tokens.pkl  9_cpg_tokens.pkl
baseline/devign/data/mydata/w2v/: w2v.model
baseline/devign/data/w2v/: w2v.model
baseline/devign/src/data/: datamanager.py
baseline/devign/src/prepare/: cpg_generator.py  embeddings.py
baseline/devign/src/process/: step.py
benchmark/: Linux_kernel_CWE-119_clean_data.json  Linux_kernel_CWE-362_clean_data.json  Linux_kernel_CWE-416_clean_data.json  Linux_kernel_CWE-476_clean_data.json  Linux_kernel_CWE-787_clean_data.json
common/: common_prompt.py  config.py  constant.py  model_manager.py
user study/: user_study.json
vulnerability knowledge/: gpt-3.5-turbo_CWE-119_316.json  gpt-3.5-turbo_CWE-362_316.json  gpt-3.5-turbo_CWE-416_316.json  gpt-3.5-turbo_CWE-476_316.json  gpt-3.5-turbo_CWE-787_316.json  gpt-4o-mini_CWE-119_316.json  gpt-4o-mini_CWE-125_316.json  gpt-4o-mini_CWE-200_316.json  gpt-4o-mini_CWE-20_316.json  gpt-4o-mini_CWE-264_316.json  (+13 more)
(+446 files in other folders)
