[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devign"
version = "0.1.0"
requires-python = ">=3.6"
dependencies = [
    "pandas>=1.0.1",
    "scikit-learn>=0.22.2",
    "torch>=1.4.0",
    "torch-geometric>=1.4.2",
    "gensim>=3.8.1",
    "cpgclientlib>=0.11.111",
] 